[kubernetes] reverting AnyOf functionality to the original state
GitOrigin-RevId: 0d750038957181f8f53c695cc2c78540c722fe18