@@ -2,7 +2,9 @@
 package org.jetbrains.yaml.meta.model;
 
 import com.intellij.codeInspection.ProblemsHolder;
+import com.intellij.openapi.util.Pair;
 import com.intellij.util.SmartList;
+import com.intellij.util.containers.ContainerUtil;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 import org.jetbrains.yaml.psi.YAMLMapping;
@@ -12,11 +14,35 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public abstract class YamlComposedTypeBase extends YamlMetaType {
-  protected final List<YamlMetaType> myTypes;
+  private final List<YamlMetaType> myTypes;
+  private final Map<String, Field> myFields = new HashMap<>();
 
   protected static List<YamlMetaType> flattenTypes(YamlMetaType... types) {
-    return new SmartList<>(types);
+    if (types.length == 0) {
+      throw new IllegalArgumentException("Nothing to compose");
+    }
+    List<YamlMetaType> flattenedTypes = new SmartList<>();
+    Set<YamlMetaType> cerber = ContainerUtil.newIdentityTroveSet();
+    for (YamlMetaType next : types) {
+      if (cerber.contains(next)) {
+        continue;
+      }
+      cerber.add(next);
+      if (next instanceof YamlScalarType) {
+        flattenedTypes.add(next);
+      }
+      else if (next instanceof YamlComposedTypeBase) {
+        YamlComposedTypeBase that = (YamlComposedTypeBase)next;
+        flattenedTypes.addAll(that.myTypes);
+      }
+      else {
+        flattenedTypes.add(next);
+      }
+    }
+    return flattenedTypes;
   }
+
+  protected abstract YamlMetaType composeTypes(YamlMetaType... types);
 
   protected YamlComposedTypeBase(@NotNull String typeName, List<YamlMetaType> types) {
     super(typeName);
@@ -27,11 +53,26 @@ public abstract class YamlComposedTypeBase extends YamlMetaType {
   @Nullable
   @Override
   public Field findFeatureByName(@NotNull String name) {
-    return mergeFields(name, myTypes.stream()
-      .map(type -> type.findFeatureByName(name))
-      .filter(Objects::nonNull)
-      .collect(Collectors.toList())
-    );
+    if (!myFields.containsKey(name)) {
+      List<Pair<Field, YamlMetaType>> fields = new SmartList<>();
+      for (YamlMetaType nextSubType : myTypes) {
+        if (nextSubType instanceof YamlScalarType) {
+          continue;
+        }
+        Field nextField = nextSubType.findFeatureByName(name);
+        if (nextField != null && !name.equals(nextField.getName())) {
+          // any name?
+          continue;
+        }
+        if (nextField != null) {
+          fields.add(Pair.create(nextField, nextSubType));
+        }
+      }
+
+      Field result = mergeFields(fields);
+      myFields.put(name, result);
+    }
+    return myFields.get(name);
   }
 
   @NotNull
@@ -73,25 +114,13 @@ public abstract class YamlComposedTypeBase extends YamlMetaType {
     return new LinkedList<>(result);
   }
 
-  private boolean hasScalarSubtypes() {
-    for (YamlMetaType type : myTypes) {
-      if(type instanceof YamlScalarType)
-        return true;
-
-      if(type instanceof YamlComposedTypeBase && ((YamlComposedTypeBase)type).hasScalarSubtypes())
-        return true;
-    }
-
-    return false;
-  }
-
   @Override
   public void buildInsertionSuffixMarkup(@NotNull YamlInsertionMarkup markup,
                                          @NotNull Field.Relation relation,
                                          @NotNull ForcedCompletionPath.Iteration iteration) {
 
     if (relation == Field.Relation.SCALAR_VALUE ||
-        (relation == Field.Relation.OBJECT_CONTENTS && hasScalarSubtypes())) {
+        (relation == Field.Relation.OBJECT_CONTENTS && !listScalarSubTypes().isEmpty())) {
       markup.append(": ");
     }
     else {
@@ -100,6 +129,18 @@ public abstract class YamlComposedTypeBase extends YamlMetaType {
       markup.newLineAndTabs(relation == Field.Relation.SEQUENCE_ITEM);
     }
     markup.appendCaret();
+  }
+
+  protected final List<YamlMetaType> listScalarSubTypes() {
+    return ContainerUtil.filter(myTypes, next -> next instanceof YamlScalarType);
+  }
+
+  protected final List<YamlMetaType> listNonScalarSubTypes() {
+    return ContainerUtil.filter(myTypes, next -> !(next instanceof YamlScalarType));
+  }
+
+  protected final Iterable<YamlMetaType> getSubTypes() {
+    return myTypes;
   }
 
   protected final Stream<YamlMetaType> streamSubTypes() {
@@ -111,42 +152,30 @@ public abstract class YamlComposedTypeBase extends YamlMetaType {
   }
 
   @Nullable
-  private Field mergeFields(@NotNull String theName, @NotNull List<Field> fields) {
-    switch (fields.size()) {
+  private Field mergeFields(@NotNull List<Pair<Field, YamlMetaType>> pairs) {
+    switch (pairs.size()) {
       case 0:
         return null;
       case 1:
-        return fields.get(0);
+        return pairs.get(0).getFirst();
     }
+    Set<String> allNames = pairs.stream().map(fieldAndType -> fieldAndType.getFirst().getName()).collect(Collectors.toSet());
+    assert allNames.size() == 1 : "Can't merge fields with different names: " + allNames;
+    String theName = pairs.get(0).getFirst().getName();
 
-    Map<Boolean, List<YamlMetaType>> typesGroupedByMultiplicity = splitByMultiplicity(fields);
+    boolean isMany = mergeIsMany(theName, pairs);
 
+    List<Field> fields = ContainerUtil.map(pairs, pair -> pair.getFirst());
     // we will assume that "positive" field qualities are merged by ANY while "negative" qualities are merged by ALL
     boolean required = fields.stream().allMatch(f -> f.isRequired());
     boolean deprecated = fields.stream().allMatch(f -> f.isDeprecated());
     boolean editable = fields.stream().anyMatch(f -> f.isEditable());
     boolean emptyAllowed = fields.stream().anyMatch(f -> f.isEmptyValueAllowed());
-    boolean anyName = fields.stream().allMatch(f -> f.isAnyNameAllowed());
+    boolean anyName = fields.stream().anyMatch(f -> f.isAnyNameAllowed());
 
-    final List<YamlMetaType> singularTypes = typesGroupedByMultiplicity.get(false);
-    YamlMetaType singularCompositeType = singularTypes != null && !singularTypes.isEmpty() ?
-                                         composeTypes(singularTypes) : null;
-
-    final List<YamlMetaType> sequentialTypes = typesGroupedByMultiplicity.get(true);
-    YamlMetaType sequentialCompositeType = sequentialTypes != null && !sequentialTypes.isEmpty() ?
-                                           composeTypes(sequentialTypes): null;
-
-    assert singularCompositeType != null || sequentialCompositeType != null;
-
-    Field result = new Field(theName, singularCompositeType != null ? singularCompositeType : sequentialCompositeType);
-
-    if(singularCompositeType == null) {
-      result.withMultiplicityMany();
-    }
-    else if(sequentialCompositeType != null) {
-      result.withRelationSpecificType(Field.Relation.SEQUENCE_ITEM, sequentialCompositeType);
-    }
-
+    YamlMetaType type = composeTypes(pairs.stream().map(p -> p.getSecond()).toArray(YamlMetaType[]::new));
+    Field result = new Field(theName, type);
+    result.withMultiplicityManyNotOne(isMany);
     if (required) {
       result.setRequired();
     }
@@ -163,24 +192,22 @@ public abstract class YamlComposedTypeBase extends YamlMetaType {
     return result;
   }
 
-  private static Map<Boolean, List<YamlMetaType>> splitByMultiplicity(@NotNull List<Field> fields) {
-    return fields.stream().collect(
-      Collectors.groupingBy(field -> field.isMany(),
-                            Collectors.mapping(field -> field.getDefaultType(), Collectors.toList())));
+  private static boolean mergeIsMany(@NotNull String name, @NotNull List<Pair<Field, YamlMetaType>> fields) {
+    // it is not clear how to merge fields with different multiplicities
+    // so we will reject the merge if they don't match
+    Map<Boolean, List<YamlMetaType>> byMultiplicity = fields.stream().collect(
+      Collectors.groupingBy(fieldAndType -> fieldAndType.getFirst().isMany(),
+                            Collectors.mapping(fieldAndType -> fieldAndType.getSecond(), Collectors.toList())));
+
+    List<YamlMetaType> forMany = byMultiplicity.getOrDefault(Boolean.TRUE, Collections.emptyList());
+    List<YamlMetaType> forSingle = byMultiplicity.getOrDefault(Boolean.FALSE, Collections.emptyList());
+    if (!forMany.isEmpty() && !forSingle.isEmpty()) {
+      throw new IllegalArgumentException("Can't merge field " + name + ", it is many for: " + forMany + " but singular for: " + forSingle);
+    }
+    return forSingle.isEmpty(); // isMany for all
   }
 
   protected static ProblemsHolder makeCopy(@NotNull ProblemsHolder original) {
     return new ProblemsHolder(original.getManager(), original.getFile(), original.isOnTheFly());
-  }
-
-  protected static YamlMetaType composeTypes(@NotNull List<YamlMetaType> types) {
-    if (types.size() == 0) {
-      throw new IllegalArgumentException();
-    }
-    if (types.size() == 1) {
-      return types.iterator().next();
-    }
-    String name = "composed[" + types.stream().map(YamlMetaType::getDisplayName).collect(Collectors.joining(",")) + "]";
-    return new YamlComposedTypeBase(name, types) {};
   }
 }
